ui/src/components/Field/Field.css
/*
 * Copyright 2018 - 2021 Swiss Federal Institute of Technology Lausanne (EPFL)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * This open source software code was developed in part or in whole in the
 * Human Brain Project, funded from the European Union's Horizon 2020
 * Framework Programme for Research and Innovation under
 * Specific Grant Agreements No. 720270, No. 785907, and No. 945539
 * (Human Brain Project SGA1, SGA2 and SGA3).
 *
 */

.kgs-field {
    width: 100%;
    display: block;
    text-align: left;
    font-size: var(--font-size);
    font-weight: 500;
    line-height: 1.3em;
    color: var(--color-7);
    margin-bottom: 12px;
}

.kgs-hit .kgs-field {
    line-height: 1.3em;
    margin-bottom: 12px;
}

.kgs-field .field-label {
    display: inline-block;
    font-weight: bold;
    font-size: var(--font-size);
    color: var(--color-8);
}

.kgs-field .field-label.as-block {
    display: block;
}

.kgs-field .field-label::after {
    content: ":";
    display: inline-block;
    padding: 0 8px 0 3px;
    font-weight: bold;
    font-size: var(--font-size-small);
    color: var(--color-12);
}

.kgs-field ul > li > ul {
    padding-left: 0;
}

.kgs-field ul > li + li > ul {
    padding-top: 10px;
}

.kgs-field__table .table th > .kgs-field > .field-label {
    display: none;
}

.kgs-field__table .table>tbody>tr>td,
.kgs-field__table .table>tbody>tr>th,
.kgs-field__table .table>tfoot>tr>td,
.kgs-field__table .table>tfoot>tr>th,
.kgs-field__table .table>thead>tr>td,
.kgs-field__table .table>thead>tr>th {
    border-color: var(--border-color-6);
}

.kgs-field__table .table>tbody>tr>th .field-value a {
    font-weight: normal;
}

